Implement total hotspot rewards API endpoints
