# api/app/controllers/relay/api/helium/l2/mobile_reward_shares_controller.rb
@@ -21,20 +21,52 @@ module Relay
 
           sig { void }
           def index
+            rewards = paginate(relation)
+
+            render json: render_collection(rewards, blueprint: MobileRewardShareBlueprint)
+          end
+
+          sig { void }
+          def totals
+            unless current_api_user.plan.find_feature!(Relay::Billing::Features::OracleData).aggregate_endpoints
+              raise Errors::FeatureNotAvailableError
+            end
+
+            columns = <<~SQL
+              sum(dc_transfer_reward) as total_dc_transfer_reward,
+              sum(poc_reward) as total_poc_reward,
+              sum(subscriber_reward) as total_subscriber_reward,
+              sum(discovery_location_amount) as total_discovery_location_amount,
+              sum(service_provider_amount) as total_service_provider_amount,
+              sum(matched_amount) as total_matched_amount
+            SQL
+
+            totals = ActiveRecord::Base.connection.execute(relation.select(columns).to_sql).first
+
+            render json: {
+              total_dc_transfer_reward: totals.fetch("total_dc_transfer_reward").to_i,
+              total_poc_reward: totals.fetch("total_poc_reward").to_i,
+              total_subscriber_reward: totals.fetch("total_subscriber_reward").to_i,
+              total_discovery_location_amount: totals.fetch("total_discovery_location_amount").to_i,
+              total_service_provider_amount: totals.fetch("total_service_provider_amount").to_i,
+              total_matched_amount: totals.fetch("total_matched_amount").to_i
+            }
+          end
+
+          private
+
+          sig { returns(ActiveRecord::Relation) }
+          def relation
             contract = build_and_validate_contract(IndexContract)
 
-            relation = Relay::Helium::L2::MobileRewardShare.order(end_period: :asc)
+            relation = Relay::Helium::L2::MobileRewardShare
 
             relation = relation.where(end_period: [ contract.from, current_api_user.lookback_window_start_date ].max..contract.to)
             relation = relation.where(hotspot_key: contract.hotspot_key) if contract.hotspot_key.present?
             relation = relation.where(reward_type: contract.reward_type) if contract.reward_type.present?
 
-            relation = paginate(relation)
-
-            render json: render_collection(relation, blueprint: MobileRewardShareBlueprint)
+            relation
           end
-
-          private
 
           sig { void }
           def require_oracle_data_feature!
